--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
   <version>1.0-SNAPSHOT</version>
   <modules>
     <module>doorman</module>
+    <module>gate</module>
   </modules>
 
   <name>cerberus</name>
@@ -41,6 +42,7 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
       <version>2.6.2</version>
+      <scope>test</scope>
     </dependency>
 
   </dependencies>
