--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,12 @@
       <artifactId>spring-boot-starter-test</artifactId>
       <version>2.6.2</version>
       <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>org.junit.vintage</groupId>
+          <artifactId>junit-vintage-engine</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
   </dependencies>
