--- a/Nodemcu/platformio.ini
+++ b/Nodemcu/platformio.ini
@@ -12,6 +12,7 @@
 platform = espressif8266
 board = nodemcuv2
 framework = arduino
-monitor_speed= 115200
-lib_deps = knolleary/PubSubClient@^2.8
-
+monitor_speed = 115200
+lib_deps = 
+	knolleary/PubSubClient@^2.8
+	marcoschwartz/LiquidCrystal_I2C@^1.1.4
