--- a/doorman/src/main/resources/application.yml
+++ b/doorman/src/main/resources/application.yml
@@ -1,17 +1,17 @@
 server:
-  port: 8080
+  port: ${DOORMAN_PORT:8080}
 spring:
   rabbitmq:
-    host: localhost
-    port: 5672
-    username: cerberususer
-    password: cerberuspass
+    host: ${RABBITMQ_HOST:localhost}
+    port: ${RABBITMQ_PORT:5672}
+    username: ${RABBITMQ_USER:cerberususer}
+    password: ${RABBITMQ_PASS:cerberuspass}
   application:
     name: doorman
   datasource:
-    password: cerberuspass
-    url: jdbc:postgresql://localhost:5432/user
-    username: cerberususer
+    password: ${POSTGRES_PASS:cerberuspass}
+    url: jdbc:postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5432}/user
+    username:  ${POSTGRES_USER:cerberususer}
   jpa:
     hibernate:
       ddl-auto: update
