--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,7 +57,25 @@ services:
     depends_on:
       - postgres
       - rabbitmq
-
+  gate:
+    container_name: gate
+    build:
+      context: ./gate
+      dockerfile: Dockerfile.dev
+    networks:
+      - cerberus_net
+    ports:
+      - "8081:8081"
+    environment:
+      POSTGRES_HOST: postgresCerberus
+      RABBITMQ_HOST: rabbit_cerberus
+      DOORMAN_HOST: doorman
+      DOORMAN_PORT: 8080
+    command: [ "./wait-for-it.sh", "rabbit_cerberus:5672","--", "java", "-jar", "target/gate-1.0-SNAPSHOT.jar" ]
+    depends_on:
+      - postgres
+      - rabbitmq
+      - doorman
 volumes:
   postgres_cerberus:
   pgadmin_cerberus:
