--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       POSTGRES_DB: user
       PGDATA: /data/postgres
     volumes:
-      - postgres:/data/postgres
+      - postgres_cerberus:/data/postgres
     networks:
       - cerberus_net
     ports:
